# sqliting

./: Cargo.toml  LICENSE  README.md
apps/vscode-extension/: package.json  pnpm-lock.yaml  tsconfig.json
apps/vscode-extension/src/: extension.ts  protocol.ts
apps/vscode-extension/src/explorer/: SqlitingExplorer.ts
apps/vscode-extension/src/result/: ResultView.ts
apps/vscode-extension/src/sidecar/: NdjsonClient.ts  SidecarManager.ts
crates/sqlite-helper/: Cargo.toml
crates/sqlite-helper/src/: cli.rs  error.rs  logging.rs  main.rs
crates/sqlite-helper/src/adapters/: mod.rs
crates/sqlite-helper/src/adapters/mcp/: server.rs
crates/sqlite-helper/src/adapters/vscode_bridge/: handler.rs  io.rs  mod.rs  protocol.rs
crates/sqlite-helper/src/core/: connection.rs  limits.rs  mod.rs  query.rs  readonly.rs  schema.rs  types.rs
rfcs/: RFC-001-Architecture.md  RFC-002-Rust-Sidecar-Design.md  RFC-003-VSCode-Extension-Design.md
